work done on 10/22

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <header>
         <h1>Grocery List Manager</h1>
+        <h3>By Rob Wiley And Mike Brenneman</h3>
     </header>
     <main>
         <button onclick="addItem()" class="addBtn">Click to Add Item</button>
-
+        <div></div>
     </main>
     <aside>
         <p>Sort:</p>
