--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
             <button onclick="purchased()">Purchased Items</button>
             <button onclick="purchased()">Unpurchased Items</button>
         </div>
+        <div id="parentContainer">
+            
+        </div>
     </aside>
 <script src="final.js"></script>
 </body>
