some changes to constructor

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <aside>
         <p>Sort:</p>
         <div class="filter">
-            <button onclick="purchased()">Purchased Items</button>
-            <button onclick="purchased()">Unpurchased Items</button>
+            <button id="purchased-filter" onclick="filterItems(this)">Purchased Items</button>
+            <button id= "unpurchased-filter" onclick="filterItems(this)">Unpurchased Items</button>
         </div>
         <div id="parentContainer">
             
