--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <aside>
         <p>Sort:</p>
         <div class="filter">
+            <button class="filter-btn" id="all-filter" onclick="filterItems(this)">All</button>
             <button class="filter-btn" id="purchased-filter" onclick="filterItems(this)">Purchased Items</button>
             <button class="filter-btn" id= "unpurchased-filter" onclick="filterItems(this)">Unpurchased Items</button>
         </div>
